looprpc: show swap expiry
